--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-THEME=https://raw.githubusercontent.com/bLaCkwEw/Dracula-Slim/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/jarodise/Dracula-for-Obsidian.md/HEAD/theme.css
 BASE_THEME=light
 SITE_NAME_HEADER=Digital Garden
 SITE_BASE_URL=https://guozhi.3hmy.cn
