--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 THEME=https://raw.githubusercontent.com/7368697661/Origami/main/theme.css
-BASE_THEME=dark
+BASE_THEME=light
 SITE_NAME_HEADER=Digital Garden
 SITE_BASE_URL=https://guozhi.3hmy.cn
 SHOW_CREATED_TIMESTAMP=false
