--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 THEME=https://raw.githubusercontent.com/kepano/obsidian-minimal/HEAD/theme.css
 BASE_THEME=dark
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=Guozhi's🌿数字花园
 SITE_BASE_URL=https://guozhi.3hmy.cn
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
