--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-THEME=https://raw.githubusercontent.com/sahilpatel09/Aqua-obsidian/HEAD/theme.css
-BASE_THEME=dark
+THEME=https://raw.githubusercontent.com/AnubisNekhet/AnuPpuccin/HEAD/theme.css
+BASE_THEME=light
 SITE_NAME_HEADER=Guozhi's🌿数字花园
 SITE_BASE_URL=https://guozhi.3hmy.cn
 SHOW_CREATED_TIMESTAMP=false
