--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-THEME=https://raw.githubusercontent.com/Everblush/Obsidian/HEAD/theme.css
-BASE_THEME=light
+
 SITE_NAME_HEADER=Guozhi's🌿数字花园
 SITE_BASE_URL=https://guozhi.3hmy.cn
 SHOW_CREATED_TIMESTAMP=false
@@ -10,7 +9,7 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS="body.css-settings-manager { --anp-cursor: pointer; --anp-file-label-align: 0; --bold-weight: 400; --anp-font-live-preview-wt: 400; --anp-font-preview-wt: 400; --anp-font-editor-wt: 400; --anp-inline-title-vis: none; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }"
+STYLE_SETTINGS_CSS="body.css-settings-manager { --cursor: crosshair; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }"
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
