--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Guozhi's🌿数字花园
+SITE_NAME_HEADER=Digital Garden
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=https://guozhi.3hmy.cn
 SHOW_CREATED_TIMESTAMP=false
@@ -9,17 +9,16 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=body.css-settings-manager { --cursor: crosshair; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
-STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-hidden-frameless obsidian-app theme-light show-inline-title show-view-header is-maximized hider-tabs hider-scroll hider-sidebar-buttons hider-tooltips hider-search-suggestions hider-search-counts hider-instructions hider-meta hider-vault minimal-theme minimal-default-dark minimal-macos-light colorful-headings colorful-frame colorful-active minimal-focus-mode links-int-on links-ext-on full-width-media img-grid labeled-nav minimal-folding minimal-readable minimal-light minimal-dark chart-default-width table-default-width img-wide iframe-default-width map-default-width css-settings-manager callouts-default trim-cols checkbox-circle pdf-seamless-on pdf-invert-dark pdf-blend-light sidebar-tabs-default ribbon-hidden maximize-tables-off tabs-default tab-stack-top minimal-tab-title-hover mobile-toolbar-off styled-scrollbars is-focused
-THEME=https://raw.githubusercontent.com/ChopTV/Obsidian-Theme-That-Shall-Not-Be-Named/HEAD/theme.css
-BASE_THEME=light
+STYLE_SETTINGS_CSS=
+STYLE_SETTINGS_BODY_CLASSES=
+USE_FULL_RESOLUTION_IMAGES=false
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=true
-dgShowLocalGraph=true
-dgShowInlineTitle=true
-dgShowFileTree=true
-dgEnableSearch=true
-dgShowToc=true
-dgLinkPreview=true
+dgShowBacklinks=false
+dgShowLocalGraph=false
+dgShowInlineTitle=false
+dgShowFileTree=false
+dgEnableSearch=false
+dgShowToc=false
+dgLinkPreview=false
 dgShowTags=false
