--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-SITE_NAME_HEADER=Digital Garden
-SITE_MAIN_LANGUAGE=en
+SITE_NAME_HEADER=Guozhi's🌿数字花园
+SITE_MAIN_LANGUAGE=zh
 SITE_BASE_URL=https://guozhi.3hmy.cn
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
@@ -12,6 +12,8 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
+THEME=https://raw.githubusercontent.com/SMUsamaShah/Obsidian-Win98-Edition/HEAD/obsidian.css
+BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
